src/App.css
@import "./assets/css/buttons.css";
@import "./assets/css/forms.css";
* {
  transition: all 0.3s ease-in-out;
}
:root {
  font-size: clamp(12px, 2.5vw, 18px);
  --header-height: 3rem;
  --vinted-green: #2fb0ba;
  --alert: rgb(198, 7, 7);
  font-family: sans-serif;
}
body {
  height: 100%;
}
strong {
  font-weight: 600;
}

#root {
  max-width: 1280px;
  margin: 0 auto;
}

.listOffers {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  a {
    text-decoration: none;
    width: calc((100% - 4 * 20px) / 5);
    min-width: 240px;
    flex: 1;
  }
}
nav {
  margin: 10px 0;
  display: flex;
  gap: 15px;
  justify-content: flex-end;
  align-items: center;
  .numberResponses {
    margin-right: auto;
    border: 1px solid var(--vinted-green);
    border-radius: 5px;
    height: 1.5rem;
    border-radius: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3px;
    padding: 0 1rem;
    color: var(--vinted-green);
  }
  .pages {
    display: inline-flex;
    gap: 4px;
    li {
      border: 1px solid lightgray;
      cursor: pointer;
      height: 1.5rem;
      width: 1.5rem;
      border-radius: 2rem;
      display: flex;
      justify-content: center;
      align-items: center;
      &.active {
        background-color: var(--vinted-green);
        color: white;
      }
    }
  }
}

.offer-page {
  background-color: #f3f5f5;
  display: flex;
  height: calc(100vh - var(--header-height));
  padding: 2rem 2rem;
  justify-content: space-between;
  overflow: hidden;
  transition: none;
  .col-g {
    width: 60%;
  }
  .react-multi-carousel-item {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .col-g img {
    width: calc(92% - 91px);
  }
  .col-d {
    background-color: white;
    width: 40%;
    padding: 2rem;
    min-width: 400px;
    font-size: 0.8rem;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
    .price {
      font-size: 1.5rem;
      margin-bottom: 1rem;
    }
    .details {
      flex-direction: column;
      display: flex;
      gap: 0.4rem;
      div {
        display: flex;
        p {
          color: lightgray;
          width: 50%;
        }
      }
    }
    hr {
      background-color: lightgrey;
      height: 1px;
      border: 0;
      width: 100%;
    }
    .name {
      font-weight: bold;
    }
    .desc {
      color: lightgray;
    }
    .owner {
      display: flex;
      justify-content: flex-start;
      align-items: center;
      gap: 32px;
      .avatar img {
        height: 48px;
        border-radius: 5px;
      }
    }
    button {
      width: 100%;
    }
  }
}

